Functional User login and Audit Log

--- a/NeuropaceInternship/templates/base_test.html
+++ b/NeuropaceInternship/templates/base_test.html
@@ -67,7 +67,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/new/init/none">Start Collaboration</a></li>
-            <li class="active"><a href="#">Audit Log <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="/audit">Audit Log<span class="sr-only">(current)</span></a></li>
             <li><a href="#">Reports</a></li>
             <li><a href="#" onclick="$('#helpText').toggle();$('#helpLink').toggle();">Help?</a></li>
           </ul>
