--- a/NeuropaceInternship/templates/base_test.html
+++ b/NeuropaceInternship/templates/base_test.html
@@ -2,21 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    {% block jquery %}
-      {% assets "js/jquery-3.2.1.min.js", "js/base.js" %}
-        <script
+      <!-- jQuery & TableSorter Plugin -->
+      <script
         src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
-      {% endassets %}
-    {% endblock jquery %}
+        crossorigin="anonymous">
+      </script>
+      <script type="text/javascript" src=static/js/jquery.tablesorter.min.js></script>
+      <script src="static/js/jquery.tablesorter.widgets.js"></script>
+      <script src="static/js/index.js" charset="utf-8"></script>
+      <!--  -->
+    <!--Bootsrap JavaScript CDN  -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--   -->
+    <!--Bootstrap CSS CDN  -->
     {% block extra_css1 %}
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous">
     {% endblock extra_css1 %}
+    <!--  -->
     {% block extra_css2 %}
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+            rel="stylesheet"
+            integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+            crossorigin="anonymous">
     {% endblock extra_css2 %}
+    {% block extra_css3 %}
+      <link rel="stylesheet" href="static/css/theme.bootstrap_3.css">
+      
+    {% endblock extra_css3 %}
     {% assets "css/base.css" %}
       <link rel="stylesheet" href="{{ ASSET_URL }}"/>
     {% endassets %}
