--- a/NeuropaceInternship/templates/index.html
+++ b/NeuropaceInternship/templates/index.html
@@ -15,27 +15,43 @@
   {% endif %}
 
   <div class="container-fluid">
-    <div class="col-md-12">
-      <h1>NeuroPace Colalboration Tracker</h1>
+    <div class="row">
+      <div class="col-md-12">
+        <h1>NeuroPace Collaboration Tracker</h1>
+        <h2>Active Collaborations</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <a href="/all">Show Archived</a>
+        <a href="#">Show Favorites</a>
+        <a href="#">Reset Filter</a>
+      </div>
+      <div class="col-sm-6">
+
+      </div>
+
     </div>
     <div class="row">
       <div class="col-md-12">
-        <h2>Active Collaborations</h2>
-        <a href="/all">Show Archived</a>
-        <table class="table table-striped table-bordered table-sm table-responsive">
+        <table id="collab_table" class="table table-striped table-bordered table-sm tablesorter">
           <thead>
             <tr>
               <th>Date Created</th>
               <th>Date Modified</th>
-              <th>Status</th>
+              <th class="filter-select filter-exact" data-placeholder="Status">Status</th>
               <th>Study Identifier</th>
-              <th>NeuroPace Contact</th>
+              <th class="filter-select filter-exact" data-placeholder="Contact">NeuroPace Contact</th>
               <th>Primary Investigator</th>
-              <th>Category</th>
+              <th class="filter-select filter-exact" data-placeholder="Category">Category</th>
               <th>Description</th>
-              <th>IRB Application Date</th>
-              <th>IRB Expiration Date</th>
-              <th colspan="3" style="text-align: center">Actions</th>
+              <th>IRB App. Date</th>
+              <th>IRB Exp. Date</th>
+              <th colspan="3" class="sorter-false">
+                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit<br />
+                <i class="fa fa-folder-open-o" aria-hidden="true"></i>Archive<br />
+                <i class="fa fa-star-o" aria-hidden="true"></i>Favorite
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -50,8 +66,8 @@
                 <td>{{ collab.pi}}</td>
                 <td>{{ collab.category.value }}</td>
                 <td>{{ collab.description}}</td>
-                <td class="table-date-td">{{ collab.irb_app_date }}</td>
-                <td class="table-date-td">{{ collab.irb_exp_date }}</td>
+                <td class="table-irb-td">{{ collab.irb_app_date }}</td>
+                <td class="table-irb-td">{{ collab.irb_exp_date }}</td>
                 <td>
                   <a href="/new/init/{{ collab.id }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 </td>
@@ -70,53 +86,6 @@
           </tbody>
         </table>
       </div>
-      <!-- <div class="col-md-4">
-        <h2>User Collaborations</h2>
-        <table>
-          <tr>
-            <th>Institution Contact</th>
-            <th>Status</th>
-            <th>Principal Investigator</th>
-            <th colspan="2">Options</th>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
-      </div> -->
-      <!-- <div class="col-md-5">
-         <h2>Archived Collaborations</h2>
-         <table class="table table-striped table-bordered table-sm">
-           <tr>
-             <th>Date Archived</th>
-             <th>Status</th>
-             <th>NeuroPace Contact</th>
-             <th>Institution</th>
-             {% if list == "all" %}
-               <th>Archived?</th>
-             {% endif %}
-             <th colspan="2">Options</th>
-           </tr>
-           {% for collab in collabs_arch %}
-             <tr>
-                {% if collab.archive == True %}
-                  <td>{{ collab.date_mod.strftime('%Y-%m-%d %I:%M:%S') }}</td>
-                  <td>{{ collab.status.value }}</td>
-                  <td>{{ collab.neuropace_contact.value }}</td>
-                  <td>{{ collab.institution }}</td>
-                  {% if list == "all" %}
-                   <td>{{ collab.archive}}</td>
-                  {% endif %}
-                  <td><a href="/archive/{{ collab.id }}">Restore</a></td>
-              {% endif %}
-             </tr>
-           {% endfor %}
-         </table>
-      </div> -->
     </div>
   </div>
-
-
 {% endblock %}
