--- a/NeuropaceInternship/templates/audit.html
+++ b/NeuropaceInternship/templates/audit.html
@@ -3,13 +3,13 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <h2>Audit Log</h2>
-        <table class="table table-striped table-bordered">
+        <table id="audit_table" class="table table-striped table-bordered tablesorter">
           <thead>
             <tr>
-              <th>User</th>
+              <th class="filter-select filter-exact" data-placeholder="User">User</th>
               <th>Date Changed</th>
               <th>Collaboration ID</th>
-              <th>Stage</th>
+              <th class="filter-select filter-exact" data-placeholder="Stage">Stage</th>
               <th>Field</th>
               <th>Previous</th>
               <th>Current</th>
