--- a/NeuropaceInternship/templates/audit.html
+++ b/NeuropaceInternship/templates/audit.html
@@ -1,8 +1,10 @@
 {% extends 'base_test.html' %}
   {% block content %}
+  <div class="container">
+    <h2>Audit Log</h2>
     <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-        <h2>Audit Log</h2>
+      <div class="col-md-12">
+        <button class="reset" type="button">Reset Audit Table</button>
         <table id="audit_table" class="table table-striped table-bordered tablesorter">
           <thead>
             <tr>
@@ -11,8 +13,8 @@
               <th>Collaboration ID</th>
               <th class="filter-select filter-exact" data-placeholder="Stage">Stage</th>
               <th>Field</th>
-              <th>Previous</th>
-              <th>Current</th>
+              <th>Previous Value</th>
+              <th>Current Value</th>
             </tr>
           </thead>
           <tbody>
@@ -33,4 +35,6 @@
         </table>
       </div>
     </div>
+  </div>
+
   {% endblock %}
