Ported over audit reset table button onto the index page for collaborations. Styled both buttons with vanilla Bootstrap classes

--- a/NeuropaceInternship/templates/index.html
+++ b/NeuropaceInternship/templates/index.html
@@ -25,13 +25,12 @@
       <div class="col-sm-6">
         <a href="/all">Show Archived</a>
         <a href="#">Show Favorites</a>
-        <a href="#">Reset Filter</a>
+        <button class="reset btn btn-primary btn-sm" type="button">Reset Collaboration Table</button>
       </div>
       <div class="col-sm-6">
-
       </div>
-
     </div>
+    <br>
     <div class="row">
       <div class="col-md-12">
         <table id="collab_table" class="table table-striped table-bordered table-sm tablesorter">
