--- a/NeuropaceInternship/templates/audit.html
+++ b/NeuropaceInternship/templates/audit.html
@@ -1,10 +1,15 @@
 {% extends 'base_test.html' %}
   {% block content %}
   <div class="container">
-    <h2>Audit Log</h2>
     <div class="row">
       <div class="col-md-12">
-        <button class="reset" type="button">Reset Audit Table</button>
+        <h2>Audit Log</h2>
+        <button class="reset btn btn-primary btn-sm" type="button">Reset Audit Table</button>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-12">
         <table id="audit_table" class="table table-striped table-bordered tablesorter">
           <thead>
             <tr>
