--- a/NeuropaceInternship/templates/index.html
+++ b/NeuropaceInternship/templates/index.html
@@ -23,9 +23,10 @@
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <a href="/all">Show Archived</a>
-        <a href="#">Show Favorites</a>
-        <button class="reset btn btn-primary btn-sm" type="button">Reset Collaboration Table</button>
+        <a class="btn btn-primary btn-inverse btn-sm" href="/filter/all">Show Acitve & Archived <i class="fa fa-th-list" aria-hidden="true"></i></a>
+        <a class="btn btn-primary btn-sm" href="/filter/archived">Show Archived <i class="fa fa-folder" aria-hidden="true"></i></a>
+        <a class="btn btn-primary btn-sm" type="button">Show Favorites <i class="fa fa-star" aria-hidden="true"></i></a>
+        <button class="reset btn btn-primary btn-sm" type="button">Reset Filter/Sort <i class="fa fa-filter" aria-hidden="true"></i></button>
       </div>
       <div class="col-sm-6">
       </div>
