Add exit without saving button

--- a/NeuropaceInternship/templates/workflow_grid.html
+++ b/NeuropaceInternship/templates/workflow_grid.html
@@ -35,6 +35,7 @@
                 <fieldset>
                   <legend>Stage Review & Submit</legend>
                     {% block review %}{% endblock %}
+                    <a class="btn btn-primary btn-sm submit" href="/">Exit Without Saving</a>
                 </fieldset>
               </div>
             </div>
