--- a/NeuropaceInternship/static/css/workflow.css
+++ b/NeuropaceInternship/static/css/workflow.css
@@ -32,6 +32,8 @@ select {
 }*/
 
 .submit {
-  margin-top: 30px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   float:right;
 }
