--- a/NeuropaceInternship/templates/audit.html
+++ b/NeuropaceInternship/templates/audit.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Audit Log</h2>
-        <button class="reset btn btn-primary btn-sm" type="button">Reset Audit Table</button>
+        <button class="reset btn btn-primary btn-sm" type="button">Reset Filter / Sort <i class="fa fa-filter" aria-hidden="true"></i></button>
       </div>
     </div>
     <br>
