Add parent title CHANGES to audit log fields of stage, field, previous, and current

--- a/NeuropaceInternship/templates/audit.html
+++ b/NeuropaceInternship/templates/audit.html
@@ -13,9 +13,11 @@
         <table id="audit_table" class="table table-striped table-bordered tablesorter">
           <thead>
             <tr>
-              <th class="filter-select filter-exact" data-placeholder="User">User</th>
-              <th>Date Changed</th>
-              <th>Collaboration ID</th>
+              <th rowspan="2" class="filter-select filter-exact" data-placeholder="User">User</th>
+              <th rowspan="2">Date Changed</th>
+              <th rowspan="2">Collaboration ID</th>
+              <th colspan="4" class="changes-header">Changes</th>
+            </tr>
               <th class="filter-select filter-exact" data-placeholder="Stage">Stage</th>
               <th>Field</th>
               <th>Previous Value</th>
