--- a/NeuropaceInternship/templates/base.html
+++ b/NeuropaceInternship/templates/base.html
@@ -65,7 +65,7 @@
             No sidebar yet?
           {% endblock %}
         </div>
-        <div class='col-md-10' id="container">
+        <div class='col-md-10' id="container-fluid">
           <div id="content">
             {% with messages = get_flashed_messages() %}
             {% if messages %}
