--- a/NeuropaceInternship/templates/closure.html
+++ b/NeuropaceInternship/templates/closure.html
@@ -32,5 +32,5 @@
   {{ form.status.label }}
   {{ form.status(class="form-control") }}
   {{ form.csrf_token }}
-  <input type="submit" class="submit" value="Submit Closure">
+  <input type="submit" class="submit btn btn-primary btn-sm" value="Submit Closure">
 {% endblock %}
