--- a/NeuropaceInternship/templates/contract.html
+++ b/NeuropaceInternship/templates/contract.html
@@ -42,5 +42,5 @@
   {{ form.status.label }}
   {{ form.status(class="form-control") }}
   {{ form.csrf_token }}
-  <input type="submit" class="submit" value="Submit Contract">
+  <input type="submit" class="submit btn btn-primary btn-sm" value="Submit Contract">
 {% endblock %}
