--- a/NeuropaceInternship/templates/details.html
+++ b/NeuropaceInternship/templates/details.html
@@ -66,5 +66,5 @@
     {{ form.status.label }}
     {{ form.status(class="form-control") }}
     {{ form.csrf_token }}
-    <input type="submit" class="submit" value="Submit Details">
+    <input type="submit" class="submit btn btn-primary btn-sm" value="Submit Details">
   {% endblock %}
