--- a/NeuropaceInternship/templates/init.html
+++ b/NeuropaceInternship/templates/init.html
@@ -47,5 +47,5 @@
     {{ form.status(class="form-control") }}
     {{ form.csrf_token }}
   </div>
-    <input class="submit" type="submit" value="Submit Initiation">
+    <input class="submit btn btn-primary btn-sm" type="submit" value="Submit Initiation">
   {% endblock %}
