--- a/NeuropaceInternship/templates/workflow_grid.html
+++ b/NeuropaceInternship/templates/workflow_grid.html
@@ -22,7 +22,7 @@
               <fieldset>
                 <legend>Stage Review & Submit</legend>
                   {% block review %}{% endblock %}
-                  <a class="btn btn-primary btn-sm submit" href="/">Exit Without Saving</a>
+                  <a class="btn btn-danger btn-sm submit" href="/">Exit Without Saving</a>
               </fieldset>
             </div>
           </div>
