--- a/NeuropaceInternship/templates/audit.html
+++ b/NeuropaceInternship/templates/audit.html
@@ -1,6 +1,6 @@
 {% extends 'base_test.html' %}
   {% block content %}
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
         <h2>Audit Log</h2>
