--- a/NeuropaceInternship/templates/legal.html
+++ b/NeuropaceInternship/templates/legal.html
@@ -37,5 +37,5 @@
   {{ form.status.label }}
   {{ form.status(class="form-control") }}
   {{ form.csrf_token }}
-  <input type="submit" class="submit" value="Submit Legal">
+  <input type="submit" class="submit btn btn-primary btn-sm" value="Submit Legal">
 {% endblock %}
