Search table view built, logic still beign worked on

--- a/NeuropaceInternship/templates/base_test.html
+++ b/NeuropaceInternship/templates/base_test.html
@@ -82,8 +82,8 @@
           <h5 class="navbar-text">Current User: {{ current_user.username }}</h5>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/new/init/none">Start Collaboration</a></li>
+            <li><a href="/search">Search All</a></li>
             <li><a href="/audit">Audit Log<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Reports</a></li>
             <li><a href="#" onclick="$('#helpText').toggle();$('#helpLink').toggle();">Help?</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
