--- a/NeuropaceInternship/templates/base_test.html
+++ b/NeuropaceInternship/templates/base_test.html
@@ -9,7 +9,7 @@
       <script src="{{ url_for('static', filename='js/jquery.tablesorter.widgets.js') }}"></script>
       <!-- Tablesorter js file for index page  -->
       <script src="{{ url_for('static', filename='js/index.js') }}" charset="utf-8"></script>
-      <!--  -->
+      
     <!--Bootsrap JavaScript CDN  -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!--   -->
@@ -71,15 +71,9 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar">
-            <form class="navbar-form navbar-left">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <button type="submit" class="btn btn-default">Submit</button>
-              </div>
-            </form>
+          <ul class="nav navbar-nav navbar-left">
+              <li class="navbar-text">Current User: {{ current_user.username }}</li>
           </ul>
-          <h5 class="navbar-text">Current User: {{ current_user.username }}</h5>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/new/init/none">Start Collaboration</a></li>
             <li><a href="/search">Search All</a></li>
